public/css/components/card.less
.widget-card {
  &.has-actions {
    .card-inner {
      min-height: 470px;
    }
    .card_info-wrapper {
      padding-bottom: 80px;
    }
    .card_actions {
      display: block;
    }
  }
}

.card-inner {
  position: relative;
  min-height: 400px;
  border: 1px solid rgba(0,0,0,.1);
  border-radius: 8px;
  background-color: @color-white;
  box-shadow: 0 1px 2px fade(@color-black, 10%);
}

.card_background-image-wrapper {
  height: 110px;
  margin: -1px -1px 0 -1px;
  border-radius: inherit;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;

  &:extend(.dark-background all);
}

.card_info-wrapper {
  padding: 18px 20px 20px;
}

.card_avatar {
  width: 88px;
  position: absolute;
  right: 20px;
  bottom: -25px;
  border: 2px solid @color-white;
  background-color: @color-white;
}

.card_username {
  margin-top: 11px;
}

.card_username-link {
  font-size: 11px;
  color: @color-neutral-mid;
  text-decoration: none;
}

.card_fullname {
  font-size: 19px;
  line-height: 27px;
  margin: 0;;
  white-space: normal;
}
.card_fullname-link {
  color: @color-neutral-x-dark;
  &:hover {color: @color-primary;}
}

.card_meta-location {
  margin: 5px 0 0 0;
  color: @color-neutral-mid;
}

.card_meta-svg {
  width: 14px;
  height: 14px;
  margin-right: 4px;
  fill: @color-neutral-light;
}

.card_meta-location-text {
  font-size: 11px;
  line-height: 14px;
}

.card_description {
  margin: 10px 0 0 0;
  white-space: normal;

  &:empty {margin: 0}

  a {color: inherit}
}

.card_stats {
  margin: 34px 0 0 0;
}

.card-stat-item {
  float: left;
  text-decoration: none;
  margin-right: 15px;

  &.last {margin-right: 0;}
}

.card-stat-item > .stats-number {
  font-size: 16px;
  text-align: left;
  color: @color-neutral-dark;
}

.card-stat-item > .stats-label {
  text-align: left;
  color: @color-neutral-mid;
}

.follow-status {
  font-size: 10px;
  border: 1px solid @color-neutral-light;
  color: @color-neutral-mid;
}

/* actions */
.card_actions {
  display: none;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 58px;
  background-color: #fff;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  text-align: center;
}

.card-actions-item {
  height: 100%;
  padding-top: 1rem;
  border-right: 1px solid @color-grey-lighter;
  cursor: pointer;
  color: @color-grey-light;
  fill: @color-grey-light;
  transition: background-color 140ms ease, box-shadow 140ms ease;

  &:first-child {
    border-radius: 0 0 0 8px;
  }

  &:last-child {
    border-right: 0;
    border-radius: 0 0 8px 0;
  }

  .card-activity-svg {
    transition: fill 240ms ease;
  }

  &:hover {
    color: @color-primary;
    fill: @color-primary;
  }

  &:active,
  &.active {
    background-color: tint(@color-grey-lighter, 50);
    box-shadow: inset 0 3px 0 @color-grey-lighter;
  }
}

.card-actions-label {
  font-size: 11px;
  transition: color 240ms ease;
}

.card-actions-follow-button {
  .following-button-single-state,
  .following-button {
    color: @color-positive-dark;
    fill: @color-positive-dark;
  }

  .following-button-single-state:hover {
    color: @color-positive;
    fill: @color-positive;
  }

  .unfollow-button {
    display: none;
    color: @color-negative;
    fill: @color-negative;
  }

  &:hover:not(.cancel-hover-state),
  &:active,
  &.active {
    .following-button {display: none}
    .unfollow-button {display: block}
  }
}

.unfollow-popover .ui-vertical-list-item,
.invite-to-popover .ui-vertical-list-item {
  line-height: 16px;
  padding-right: 2em;
}

.card-send-message .ui-popover-body {
  width: 300px;
  padding: 0 10px 10px;
}


/* =========================================================================== *
 * card-mini
 * =========================================================================== */
.card-mini {
  .action {
    top: 16px;
    right: 16px;
  }
}

.card-mini.has-meta {
  .card-mini-fullname,
  .card-mini-username {
    display: inline-block;
  }

  .card-mini-username {
    margin: 1px 0 0 5px;
  }
}

.card-mini-info {
  margin-left: 46px;
}

.card-mini-fullname {
  color: @color-neutral-x-dark;
  &:hover {color: @color-primary;}
}

.card-mini-username {
  font-size: 11px;
  color: @color-neutral-mid;
}

.card-info-meta {
  font-size: 11px;
  color: @color-neutral-mid;
}

/* =========================================================================== *
 * card-small
 * =========================================================================== */
.card-small {
  .card_background-image-wrapper {
    height: 80px;
  }

  .card-inner {
    min-height: initial;
    box-shadow: 0 5px 10px rgba(0,0,0,0.15);
  }

  .card_info-wrapper {
    padding: 0 15px 20px;
  }

  .card_avatar {
    width: 64px;
    height: 64px;
    right: 15px;
  }

  .card_fullname {
    font-size: 15px;
    line-height: 23px;
  }

  .card_description {
    font-size: 10px;
    color: @color-neutral-dark;
  }

  .card_stats {
    margin-top: 10px;
  }

  .card-stat-item {
    margin-right: 11px;
    &.last {margin-right: 0;}
  }

  .card-stat-item > .stats-number {
    font-size: 13px;
  }

  .card-stat-item > .stats-label {
    font-size: 10px;
  }
}

/* =========================================================================== *
 * card-hover
 * =========================================================================== */
.widget-card-hover-container {
  z-index: 2;
  position: fixed;
  top: 0;
  left: 0;
  width: 230px;
  padding: 10px 0;
  display: none;
}

